Adding second draft of website

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 
 <body>
     <!-- Hero Section -->
+    <div class="hero">
     <h1>CodeWithJoy</h1>
         <p>Let's work together and create something amazing toghether!</p>
+    </div>
 
     <div class="section">
         <h2>About Me</h2>
-        <p>Hey there! I'm Joy - a passionate creative, dev-in-training, and the found of <strong>CodeHive Innovations</strong>.<br>
+        <p>Hey there! I'm Joy - a passionate creative, dev-in-training, and the founder of <strong>CodeHive Innovations</strong>.<br>
             I blend technical skill with artistic flair to bring your videos to life. I care about quality, deadlines, and making sure <em>you</em> shine.<br> 
             Every cut, transition, and beat sync is handled with care and a touch of joy.</p>
     </div>
-
+    <hr>
     <div class="section">
         <h2>Packages</h2>
         <div class="package">
