pushing 3rd draft of website

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Hero Section -->
     <div class="hero">
     <h1>CodeWithJoy</h1>
-        <p>Let's work together and create something amazing toghether!</p>
+        <p class="ph">Rewriting the Future ~ <br> One Code At a Time.</p>
     </div>
 
     <div class="section">
@@ -23,31 +23,32 @@
     <hr>
     <div class="section">
         <h2>Packages</h2>
-        <div class="package">
-            <strong>Short Edit - R150.00</strong>
-            <p>Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
-        </div>
+            <div class="package">
+                <strong>Short Edit - R150.00</strong>
+                <p>Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
+            </div>
 
-        <div class="package">
-            <strong>YouTube Basic - R350.00</strong>
-            <p>Clean edit for YouTube videos up to 10 minutes.</p>
-        </div>
+            <div class="package">
+                <strong>YouTube Basic - R350.00</strong>
+                <p>Clean edit for YouTube videos up to 10 minutes.</p>
+            </div>
 
-        <div class="package">
-            <strong>Premium Edit - R950.00</strong>
-            <p>10 - 20 minutes + transitions, music, intor/outro, efforts
-        </div>
+            <div class="package">
+                <strong>Premium Edit - R950.00</strong>
+                <p>10 - 20 minutes + transitions, music, intor/outro, efforts
+            </div>
 
-        <div class="package">
-            <strong>Special Quote</strong>
-            <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
-    </div>
-    <-- Contact Section -->
+            <div class="section">
+                <strong>Special Quote</strong>
+                <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
+            </div>
+        </div>
+    <hr>
          <div class="contact">
             <h3>Book Now</h3>
             <p>Ready to get started? Let's chat about your project!</p>
             <p>E-mail <a href="mailto:codewithjoy.dev91@gmail.com">codewithjoy.dev91@gmail.com</a></p>
-            <p>Or send a Whatsapp message to <a href="https://wa.me/27693171456>069 317 1456</a></p>
+            <p>Or send a Whatsapp message to <a href="https://wa.me/27693171456">069 317 1456</a></p>
          </div>
 
    <footer class="footer">
