--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
 
             <div class="section">
-                <strong>Special Quote</strong>
+                <strong class="Quote">Special Quote</strong>
                 <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
             </div>
         </div>
