--- a/index.html
+++ b/index.html
@@ -9,10 +9,15 @@
 
 <body>
     <!-- Hero Section -->
-    <div class="hero">
-    <h1>CodeWithJoy</h1>
-        <p class="ph">Rewriting the Future ~ <br> One Code At a Time.</p>
-    </div>
+    <section class="hero">
+        <div class="hero-content">
+            <img src="logo.png" alt="CodeWithJoy Logo" class="logo">
+        </div>
+        <div class="hero-text">
+            <h1>Welcome to CodeWithJoy</h1>
+            <p>Rewriting the Future ~ One Code At a Time.</p>
+        </div>
+    </section>
 
     <div class="section">
         <h2>About Me</h2>
@@ -41,6 +46,15 @@
             <div class="section">
                 <strong class="Quote">Special Quote</strong>
                 <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
+            </div>
+
+            <div class="video-container">
+                <iframe width="100%" height="500" 
+                    src="https://youtube.com/shorts/Z9NXrR8E-sQ?feature=share?rel=0" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    allowfullscreen>
+                </iframe>
             </div>
         </div>
     <hr>
