pushing changes to styling

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <img src="logo.png" alt="CodeWithJoy Logo" class="logo">
+            <img src="logo/Logo.png" alt="CodeWithJoy Logo" class="logo">
         </div>
         <div class="hero-text">
             <h1>Welcome to CodeWithJoy</h1>
-            <p>Rewriting the Future ~ One Code At a Time.</p>
+            <p class="ph">Rewriting the Future ~ One Code At a Time.</p>
         </div>
     </section>
 
@@ -29,17 +29,17 @@
     <div class="section">
         <h2>Packages</h2>
             <div class="package">
-                <strong>Short Edit - R150.00</strong>
+                <strong class="sp">Short Edit - R150.00</strong>
                 <p>Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
             </div>
 
             <div class="package">
-                <strong>YouTube Basic - R350.00</strong>
+                <strong class="sp">YouTube Basic - R350.00</strong>
                 <p>Clean edit for YouTube videos up to 10 minutes.</p>
             </div>
 
             <div class="package">
-                <strong>Premium Edit - R950.00</strong>
+                <strong class="sp">Premium Edit - R950.00</strong>
                 <p>10 - 20 minutes + transitions, music, intor/outro, efforts
             </div>
 
