--- a/index.html
+++ b/index.html
@@ -9,15 +9,14 @@
 
 <body>
     <!-- Hero Section -->
-    <section class="hero">
-        <div class="hero-content">
-            <img src="logo/Logo.png" alt="CodeWithJoy Logo" class="logo">
-        </div>
+    <div class="hero">
+        <img src="logo/Logo.png" alt="CodeWithJoy Logo" class="logo">
         <div class="hero-text">
-            <h1>Welcome to CodeWithJoy</h1>
-            <p class="ph">Rewriting the Future ~ One Code At a Time.</p>
+            <h1 class="brand">Welcome to CodeWithJoy</h1>
+            <h2 class="tagline">Rewriting the Future</h2>
+            <p class="subtag">One Code At a Time.</p>
         </div>
-    </section>
+    </div>
 
     <div class="section">
         <h2>About Me</h2>
