fixing styling issues

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <h2>Packages</h2>
             <div class="package">
                 <strong class="sp">Short Edit - R150.00</strong>
-                <p>Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
+                <p class="description">Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
             </div>
 
             <div class="package">
                 <strong class="sp">YouTube Basic - R350.00</strong>
-                <p>Clean edit for YouTube videos up to 10 minutes.</p>
+                <p class="description">Clean edit for YouTube videos up to 10 minutes.</p>
             </div>
 
             <div class="package">
                 <strong class="sp">Premium Edit - R950.00</strong>
-                <p>10 - 20 minutes + transitions, music, intor/outro, efforts
+                <p class="description">10 - 20 minutes + transitions, music, intor/outro, efforts
             </div>
 
             <div class="section">
