--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <img src="logo/Logo.png" alt="CodeWithJoy Logo" class="logo">
         <div class="hero-text">
             <h1 class="brand">Welcome to CodeWithJoy</h1>
-            <h2 class="tagline">Rewriting the Future</h2>
-            <p class="subtag">One Code At a Time.</p>
+            <h2 class="tagline">Rewriting the Future, One Code At a Time</h2>
         </div>
     </div>
 
