changing line spacing and more styling

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <p class="description">10 - 20 minutes + transitions, music, intor/outro, efforts
             </div>
 
-            <div class="section">
-                <strong class="Quote">Special Quote</strong>
+            <div class="package">
+                <strong class="sp">Special Quote</strong>
                 <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
             </div>
     <hr>
         <div class="contact">
-            <h3>Book Now</h3>
+            <h2>Book Now</h2>
             <p>Ready to get started? Let's chat about your project!</p>
             <p>E-mail <a href="mailto:codewithjoy.dev91@gmail.com">codewithjoy.dev91@gmail.com</a></p>
             <p>Or send a Whatsapp message to <a href="https://wa.me/27693171456">069 317 1456</a></p>
