correcting fonts and styling

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div class="package">
                 <strong class="sp">Special Quote</strong>
-                <p>Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
+                <p class="description">Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
             </div>
     <hr>
         <div class="contact">
