amending spacing and logo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             <div class="package">
                 <strong class="sp">Premium Edit - R950.00</strong>
-                <p class="description">10 - 20 minutes + transitions, music, intor/outro, efforts
+                <p class="description">10 - 20 minutes + transitions, music, intro/outro, efforts
             </div>
 
             <div class="package">
