--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <div class="section">
         <h2>Packages</h2>
             <div class="package">
-                <strong class="sp">Short Edit - R150.00</strong>
+                <strong class="sp">Short Edit - R150.00/$9.00</strong>
                 <p class="description">Perfect for TikTok, Reels or Shorts (up to 60 seconds)</p>
             </div>
 
             <div class="package">
-                <strong class="sp">YouTube Basic - R350.00</strong>
+                <strong class="sp">YouTube Basic - R350.00/$18.00</strong>
                 <p class="description">Clean edit for YouTube videos up to 10 minutes.</p>
             </div>
 
             <div class="package">
-                <strong class="sp">Premium Edit - R950.00</strong>
+                <strong class="sp">Premium Edit - R950.00/$49.00</strong>
                 <p class="description">10 - 20 minutes + transitions, music, intro/outro, efforts
             </div>
 
