adding social media

--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
                 <strong class="sp">Special Quote</strong>
                 <p class="description">Should you have any other needs that are not covered by the above packages, please feel free to contact me and I will provide you with a special quote that covers all your needs. </p>
             </div>
+    </div>    
     <hr>
+        <div class ="reference">
+            <h2>References</h2>
+            <p>I am currently editing the videos for the YouTube handle <a href="https://www.youtube.com/@GhostLegendRTX">@GhostLegendRTX</a></p>
+            <p>Check out my work on <a href="https://www.youtube.com/@CodeWithJoy91">YouTube</a> and <a href="https://www.instagram.com/codewithjoy/">Instagram</a>.</p>
+        </div>
         <div class="contact">
             <h2>Book Now</h2>
             <p>Ready to get started? Let's chat about your project!</p>
